# yolov4-mask-detector

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  entrypoint.sh  run-docker.sh
data/python/: cleanup_filenames.py  prepare_dataset.py
data/yolo/: class.names  yolov4-mask-256.cfg  yolov4-mask-416.cfg  yolov4-mask.data
src/: main.cpp  utilities.cpp  utilities.hpp
